--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
 commands =
     isort -rc -c -df sphinxcontrib tests
     yapf -rd sphinxcontrib tests
-    flake8 --ignore=E501 sphinxcontrib tests setup.py
+    flake8 --ignore=E501 sphinxcontrib tests
 
 [testenv:mypy]
 description =
