--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,14 @@ description-file =
     README.rst
 author = Crossbar.io Technologies GmbH
 author-email = support@crossbario.com
-home-page = http://www.sphinx-doc.org/
+home-page = https://github.com/xbr/sphinxcontrib-xbr
+license_file = LICENSE
 classifier =
     Development Status :: 3 - Alpha
     Environment :: Console
     Framework :: Sphinx :: Extension
     Intended Audience :: Developers
-    License :: OSI Approved :: Apache Software License
+    License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 2
@@ -33,6 +34,9 @@ namespace_packages =
 
 [wheel]
 universal = 1
+
+[bdist_wheel]
+universal=1
 
 [mypy]
 python_version = 2.7
